Code cleanup (#368)
* Fix code warnings (#368)

Signed-off-by: Aleksandr Muravja <alex@kyberorg.io>